# NUCLEO_F429_ThreadX_v6.4.1

./: .gitignore  CMakeLists.txt  F429_ThreadX.ioc  STM32F429ZITX_FLASH.ld  STM32F429ZITX_RAM.ld
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: demo_threadx.c  gcc_printf_port.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tx_initialize_low_level.S
cmake/: arm-none-eabi-gcc.cmake
